[package]

name = "easter"
version = "0.0.5"
authors = ["Dave Herman <dherman@mozilla.com>"]
license = "MIT"
description = "Type definitions for ECMAScript abstract syntax trees."
documentation = "https://esprit.surge.sh"
homepage = "https://esprit.surge.sh"
repository = "https://github.com/dherman/esprit"

[dependencies]
joker = { version = "0.0.5", path = "../joker" }
