[package]

name = "estree"
version = "0.0.2"
authors = ["Dave Herman <dherman@mozilla.com>"]
license = "MIT"
description = "A deserializer for the ESTree format."
repository = "https://github.com/dherman/esprit"

[dependencies]
serde = "0.6.1"
serde_json = "0.5.1"
unjson = { version = "0.0.1", path = "../unjson" }
joker = { version = "0.0.1", path = "../joker" }
easter = { version = "0.0.1", path = "../easter" }
