[package]

name = "estree"
version = "0.0.4"
authors = ["Dave Herman <dherman@mozilla.com>"]
license = "MIT"
description = "A deserializer for the ESTree format."
documentation = "https://esprit.surge.sh"
homepage = "https://esprit.surge.sh"
repository = "https://github.com/dherman/esprit"

[dependencies]
serde = "0.7.10"
serde_json = "0.7.1"
unjson = { version = "0.0.4", path = "../unjson" }
joker = { version = "0.0.4", path = "../joker" }
easter = { version = "0.0.4", path = "../easter" }
