[package]

name = "estree"
version = "0.0.5"
authors = ["Dave Herman <dherman@mozilla.com>"]
license = "MIT"
description = "A deserializer for the ESTree format."
documentation = "https://esprit.surge.sh"
homepage = "https://esprit.surge.sh"
repository = "https://github.com/dherman/esprit"

[dependencies]
serde = "1.0"
serde_json = "1.0"
unjson = { version = "0.0.5", path = "../unjson" }
joker = { version = "0.0.5", path = "../joker" }
easter = { version = "0.0.5", path = "../easter" }
