[package]

name = "joker"
version = "0.0.5"
authors = ["Dave Herman <dherman@mozilla.com>"]
license = "MIT"
description = "A JavaScript tokenizer."
documentation = "https://esprit.surge.sh"
homepage = "https://esprit.surge.sh"
repository = "https://github.com/dherman/esprit"

[dependencies]
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
