[package]

name = "unjson"
version = "0.0.4"
authors = ["Dave Herman <dherman@mozilla.com>"]
license = "MIT"
description = "Tools for destructuring JSON data."
documentation = "https://esprit.surge.sh"
homepage = "https://esprit.surge.sh"
repository = "https://github.com/dherman/esprit"

[dependencies]
serde_json = "0.7.1"
